finished session management system, pre testing

--- a/.env.example
+++ b/.env.example
@@ -103,6 +103,80 @@ AUTH_REQUIRE_AUTH=true
 AUTH_SESSION_LIFETIME=86400
 AUTH_REMEMBER_COOKIE_DURATION=2592000
 
+# =============================================================================
+# SESSION MANAGEMENT CONFIGURATION
+# =============================================================================
+
+# Session Environment (development, testing, staging, production)
+SESSION_ENVIRONMENT=development
+SESSION_DEBUG_MODE=false
+
+# Session Timeout Configuration
+SESSION_LIFETIME_SECONDS=172800  # 48 hours
+SESSION_IDLE_TIMEOUT_SECONDS=86400  # 24 hours
+SESSION_ABSOLUTE_TIMEOUT_SECONDS=604800  # 7 days
+SESSION_EXPIRATION_GRACE_SECONDS=300  # 5 minutes
+SESSION_CLEANUP_GRACE_SECONDS=600  # 10 minutes
+SESSION_WARNING_THRESHOLD_SECONDS=900  # 15 minutes
+
+# Session Cleanup Configuration
+SESSION_CLEANUP_INTERVAL_SECONDS=1800  # 30 minutes
+SESSION_BATCH_CLEANUP_INTERVAL_SECONDS=21600  # 6 hours
+SESSION_DEEP_CLEANUP_INTERVAL_SECONDS=86400  # 24 hours
+SESSION_CLEANUP_BATCH_SIZE=100
+SESSION_MAX_CLEANUP_BATCHES=10
+SESSION_MAX_EXPIRED_THRESHOLD=1000
+SESSION_CLEANUP_TRIGGER_THRESHOLD=500
+SESSION_EXPIRED_RETENTION_DAYS=7
+SESSION_AUDIT_RETENTION_DAYS=30
+
+# Cross-Tab Synchronization Configuration
+SESSION_SYNC_CHECK_INTERVAL_SECONDS=2
+SESSION_HEARTBEAT_INTERVAL_SECONDS=30
+SESSION_SYNC_TIMEOUT_SECONDS=5
+SESSION_TAB_RESPONSE_TIMEOUT_SECONDS=3
+SESSION_LOCALSTORAGE_PREFIX=vedfolnir_session_
+SESSION_MAX_SYNC_DATA_SIZE=1024
+
+# Session Security Configuration
+SESSION_ENABLE_FINGERPRINTING=true
+SESSION_ENABLE_SUSPICIOUS_DETECTION=true
+SESSION_ENABLE_AUDIT_LOGGING=true
+SESSION_MAX_CONCURRENT_PER_USER=5
+SESSION_SUSPICIOUS_ACTIVITY_THRESHOLD=10
+SESSION_MAX_PLATFORM_SWITCHES_PER_HOUR=50
+SESSION_SECURITY_CHECK_INTERVAL_SECONDS=300
+
+# Session Monitoring Configuration
+SESSION_ENABLE_PERFORMANCE_MONITORING=true
+SESSION_ENABLE_METRICS_COLLECTION=true
+SESSION_ENABLE_HEALTH_CHECKS=true
+SESSION_METRICS_INTERVAL_SECONDS=60
+SESSION_HEALTH_CHECK_INTERVAL_SECONDS=300
+SESSION_METRICS_BUFFER_SIZE=1000
+SESSION_EVENTS_BUFFER_SIZE=500
+
+# Session Alert Thresholds
+SESSION_ALERT_CREATION_RATE=100.0
+SESSION_ALERT_FAILURE_RATE=10.0
+SESSION_ALERT_AVG_DURATION=3600.0
+SESSION_ALERT_CONCURRENT_SESSIONS=1000.0
+SESSION_ALERT_SUSPICIOUS_RATE=5.0
+
+# Session Feature Flags
+SESSION_FEATURE_CROSS_TAB_SYNC=true
+SESSION_FEATURE_PLATFORM_SWITCHING=true
+SESSION_FEATURE_PERSISTENCE=true
+SESSION_FEATURE_OPTIMISTIC_UI=true
+SESSION_FEATURE_BACKGROUND_CLEANUP=true
+SESSION_FEATURE_ANALYTICS=true
+SESSION_FEATURE_CLUSTERING=false
+SESSION_FEATURE_DISTRIBUTED=false
+SESSION_FEATURE_CACHING=false
+
+# Custom Session Settings (prefix with SESSION_CUSTOM_)
+# SESSION_CUSTOM_EXAMPLE_SETTING=value
+
 # Admin User Credentials - Managed in Database
 # Admin user credentials are created and stored in the database, not in this file.
 # Use the setup script to create the admin user: python3 scripts/setup/generate_env_secrets.py
