just before test-failure-fixes

--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,8 @@ DATABASE_URL=sqlite:///storage/database/vedfolnir.db
 # =============================================================================
 
 # Ollama Configuration
-OLLAMA_URL=http://localhost:11434
-OLLAMA_MODEL=llava:7b
+OLLAMA_URL=CHANGE_ME_TO_OLLAMA_URL_AND_PORT
+OLLAMA_MODEL=CHANGE_ME_TO_OLLAMA_MODEL
 OLLAMA_TIMEOUT=60.0
 
 # =============================================================================
