admin area working, colors not right

--- a/.env.example
+++ b/.env.example
@@ -239,3 +239,26 @@ RETENTION_ERROR_IMAGES=60
 #
 # All credentials are encrypted and stored securely in the database.
 # No platform credentials should be stored in this .env file.
+
+
+# =============================================================================
+# SECURITY FEATURE TOGGLES (Development/Testing Only)
+# =============================================================================
+
+# CSRF Protection
+SECURITY_CSRF_ENABLED=true
+
+# Rate Limiting
+SECURITY_RATE_LIMITING_ENABLED=true
+
+# Input Validation and Sanitization
+SECURITY_INPUT_VALIDATION_ENABLED=true
+
+# Security Headers
+SECURITY_HEADERS_ENABLED=true
+
+# Session Security Validation
+SECURITY_SESSION_VALIDATION_ENABLED=true
+
+# Admin Access Control
+SECURITY_ADMIN_CHECKS_ENABLED=true
