--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@
 # CORE APPLICATION SETTINGS
 # =============================================================================
 
+# App version
+APP_VERSION=0.001
+
 # Flask Application
 FLASK_HOST=127.0.0.1
 FLASK_PORT=5000
@@ -35,6 +38,7 @@ OLLAMA_TIMEOUT=60.0
 CAPTION_MAX_LENGTH=500
 CAPTION_OPTIMAL_MIN_LENGTH=150
 CAPTION_OPTIMAL_MAX_LENGTH=450
+CAPTION_MAX_STORAGE_GB=5
 
 # Enhanced Image Classification
 USE_ENHANCED_CLASSIFICATION=true
