trying to step back on the redis sessions, probably toss this one

--- a/.env.example
+++ b/.env.example
@@ -111,6 +111,30 @@ AUTH_REMEMBER_COOKIE_DURATION=2592000
 # SESSION MANAGEMENT CONFIGURATION
 # =============================================================================
 
+# Redis Configuration for Session Storage
+REDIS_URL=redis://localhost:6379/0
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=  # Optional, leave empty for no authentication
+REDIS_SSL=false
+
+# Redis Session Settings
+REDIS_SESSION_PREFIX=vedfolnir:session:
+REDIS_SESSION_TIMEOUT=7200  # Session timeout in seconds (2 hours)
+REDIS_SESSION_CLEANUP_INTERVAL=3600  # Cleanup interval in seconds (1 hour)
+
+# Flask Session Cookie Configuration
+SESSION_COOKIE_NAME=session
+SESSION_COOKIE_HTTPONLY=true
+SESSION_COOKIE_SECURE=true  # Set to false for development over HTTP
+SESSION_COOKIE_SAMESITE=Lax
+SESSION_COOKIE_MAX_AGE=7200  # Cookie max age in seconds (2 hours)
+
+# Database Session Fallback
+DB_SESSION_FALLBACK=true  # Enable database fallback for session persistence
+DB_SESSION_SYNC=true      # Sync session data between Redis and database
+
 # Session Environment (development, testing, staging, production)
 SESSION_ENVIRONMENT=development
 SESSION_DEBUG_MODE=false
