integrated mysql, need to make sure docs and tech are updated, platform not working, some gdpr ares not implemented

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Vedfolnir Configuration Template
+# Vedfolnir MySQL Configuration Template
 # Copy this file to .env and configure your settings
 
 # =============================================================================
@@ -18,8 +18,60 @@ FLASK_DEBUG=false
 # NEVER use the example value below in production!
 FLASK_SECRET_KEY=CHANGE_ME_TO_A_SECURE_32_CHAR_SECRET_KEY
 
-# Database Configuration
-DATABASE_URL=sqlite:///storage/database/vedfolnir.db
+# =============================================================================
+# DATABASE CONFIGURATION - MySQL with Unix Socket
+# =============================================================================
+
+# Database Type
+DB_TYPE=mysql
+
+# MySQL Database Configuration
+DB_NAME=vedfolnir
+DB_USER=database_user
+DB_PASSWORD=database_password
+DB_UNIX_SOCKET=/var/run/mysqld/mysqld.sock
+DATABASE_URL=mysql+pymysql://database_user:database_password@localhost/vedfolnir?unix_socket=/var/run/mysqld/mysqld.sock&charset=utf8mb4
+
+# =============================================================================
+# REDIS CONFIGURATION (UNCHANGED)
+# =============================================================================
+
+# Redis Configuration for Session Storage
+REDIS_URL=redis://:your-redis-password@localhost:6379/0
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=your-redis-password
+REDIS_SSL=false
+
+SESSION_STORAGE=redis
+
+# Redis Session Settings
+REDIS_SESSION_PREFIX=vedfolnir:session:
+REDIS_SESSION_TIMEOUT=7200  # Session timeout in seconds (2 hours)
+REDIS_SESSION_CLEANUP_INTERVAL=3600  # Cleanup interval in seconds (1 hour)
+
+# Flask Session Cookie Configuration
+SESSION_COOKIE_NAME=session
+SESSION_COOKIE_HTTPONLY=true
+SESSION_COOKIE_SECURE=true  # Set to false for development over HTTP
+SESSION_COOKIE_SAMESITE=Lax
+SESSION_COOKIE_MAX_AGE=7200  # Cookie max age in seconds (2 hours)
+
+# Database Session Fallback
+DB_SESSION_FALLBACK=true  # Enable database fallback for session persistence
+DB_SESSION_SYNC=true      # Sync session data between Redis and database
+
+# =============================================================================
+# DATABASE PERFORMANCE CONFIGURATION
+# =============================================================================
+
+# Database Performance Configuration (MySQL Optimized)
+DB_POOL_SIZE=20
+DB_MAX_OVERFLOW=50
+DB_POOL_TIMEOUT=30
+DB_POOL_RECYCLE=3600
+DB_QUERY_LOGGING=false
 
 # =============================================================================
 # AI/ML CONFIGURATION
@@ -107,37 +159,23 @@ AUTH_REQUIRE_AUTH=true
 AUTH_SESSION_LIFETIME=86400
 AUTH_REMEMBER_COOKIE_DURATION=2592000
 
+# Platform Encryption Key - REQUIRED for encrypting stored platform credentials
+# Generate using: python3 -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+# This key encrypts API tokens and credentials stored in the database
+# If lost, all stored platform credentials become unrecoverable
+# NEVER use the example value below in production!
+PLATFORM_ENCRYPTION_KEY=CHANGE_ME_TO_A_FERNET_ENCRYPTION_KEY
+
 # =============================================================================
-# SESSION MANAGEMENT CONFIGURATION
+# SESSION MANAGEMENT CONFIGURATION (UNCHANGED)
 # =============================================================================
-
-# Redis Configuration for Session Storage
-REDIS_URL=redis://localhost:6379/0
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_DB=0
-REDIS_PASSWORD=  # Optional, leave empty for no authentication
-REDIS_SSL=false
-
-# Redis Session Settings
-REDIS_SESSION_PREFIX=vedfolnir:session:
-REDIS_SESSION_TIMEOUT=7200  # Session timeout in seconds (2 hours)
-REDIS_SESSION_CLEANUP_INTERVAL=3600  # Cleanup interval in seconds (1 hour)
-
-# Flask Session Cookie Configuration
-SESSION_COOKIE_NAME=session
-SESSION_COOKIE_HTTPONLY=true
-SESSION_COOKIE_SECURE=true  # Set to false for development over HTTP
-SESSION_COOKIE_SAMESITE=Lax
-SESSION_COOKIE_MAX_AGE=7200  # Cookie max age in seconds (2 hours)
-
-# Database Session Fallback
-DB_SESSION_FALLBACK=true  # Enable database fallback for session persistence
-DB_SESSION_SYNC=true      # Sync session data between Redis and database
 
 # Session Environment (development, testing, staging, production)
 SESSION_ENVIRONMENT=development
 SESSION_DEBUG_MODE=false
+
+# Testing Configuration
+DISABLE_CSRF_FOR_TESTING=false
 
 # Session Timeout Configuration
 SESSION_LIFETIME_SECONDS=172800  # 48 hours
@@ -202,26 +240,6 @@ SESSION_FEATURE_CLUSTERING=false
 SESSION_FEATURE_DISTRIBUTED=false
 SESSION_FEATURE_CACHING=false
 
-# Custom Session Settings (prefix with SESSION_CUSTOM_)
-# SESSION_CUSTOM_EXAMPLE_SETTING=value
-
-# Admin User Credentials - Managed in Database
-# Admin user credentials are created and stored in the database, not in this file.
-# Use the setup script to create the admin user: python3 scripts/setup/generate_env_secrets.py
-
-# Platform Encryption Key - REQUIRED for encrypting stored platform credentials
-# Generate using: python3 -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
-# This key encrypts API tokens and credentials stored in the database
-# If lost, all stored platform credentials become unrecoverable
-# NEVER use the example value below in production!
-PLATFORM_ENCRYPTION_KEY=CHANGE_ME_TO_A_FERNET_ENCRYPTION_KEY
-
-# SECURITY WARNING: 
-# - Copy this file to .env and replace ALL example values with secure, unique values
-# - The .env file is gitignored and should never be committed to version control
-# - See docs/security/environment-setup.md for detailed setup instructions
-# - Use the provided scripts in scripts/setup/ to generate secure values automatically
-
 # =============================================================================
 # STORAGE AND LOGGING
 # =============================================================================
@@ -235,39 +253,11 @@ LOGS_DIR=logs
 # Logging Configuration
 LOG_LEVEL=INFO
 
-# Database Performance Configuration
-DB_POOL_SIZE=50
-DB_MAX_OVERFLOW=100
-DB_POOL_TIMEOUT=30
-DB_POOL_RECYCLE=1800
-DB_QUERY_LOGGING=false
-
 # Data Retention Configuration (in days)
 RETENTION_PROCESSING_RUNS=90
 RETENTION_REJECTED_IMAGES=30
 RETENTION_POSTED_IMAGES=180
 RETENTION_ERROR_IMAGES=60
-
-# =============================================================================
-# PLATFORM CONNECTIONS
-# =============================================================================
-# Platform-specific settings (URLs, tokens, credentials) are now managed
-# through the web interface for better security and ease of use.
-#
-# To configure platform connections:
-# 1. Start the web application: python web_app.py
-# 2. Go to Platform Management in the web interface
-# 3. Click \"Add Platform\" to configure your connections
-# 4. Enter your platform details and credentials
-# 5. Test the connection to ensure it works
-#
-# Supported platforms:
-# - Pixelfed: Requires instance URL, username, and access token
-# - Mastodon: Requires instance URL, username, access token, and OAuth credentials
-#
-# All credentials are encrypted and stored securely in the database.
-# No platform credentials should be stored in this .env file.
-
 
 # =============================================================================
 # SECURITY FEATURE TOGGLES (Development/Testing Only)
@@ -290,3 +280,41 @@ SECURITY_SESSION_VALIDATION_ENABLED=true
 
 # Admin Access Control
 SECURITY_ADMIN_CHECKS_ENABLED=true
+
+# =============================================================================
+# EMAIL CONFIGURATION
+# =============================================================================
+
+# Email Configuration (for user notifications)
+MAIL_SERVER=sandbox.smtp.mailtrap.io
+MAIL_PORT=587
+MAIL_USE_TLS=true
+MAIL_USERNAME=your-mail-username
+MAIL_PASSWORD=your-mail-password
+MAIL_DEFAULT_SENDER=admin@vedfolnir.org
+
+# =============================================================================
+# PLATFORM CONNECTIONS
+# =============================================================================
+# Platform-specific settings (URLs, tokens, credentials) are now managed
+# through the web interface for better security and ease of use.
+#
+# To configure platform connections:
+# 1. Start the web application: python web_app.py
+# 2. Go to Platform Management in the web interface
+# 3. Click "Add Platform" to configure your connections
+# 4. Enter your platform details and credentials
+# 5. Test the connection to ensure it works
+#
+# Supported platforms:
+# - Pixelfed: Requires instance URL, username, and access token
+# - Mastodon: Requires instance URL, username, access token, and OAuth credentials
+#
+# All credentials are encrypted and stored securely in the MySQL database.
+# No platform credentials should be stored in this .env file.
+
+# SECURITY WARNING: 
+# - Copy this file to .env and replace ALL example values with secure, unique values
+# - The .env file is gitignored and should never be committed to version control
+# - See docs/security/environment-setup.md for detailed setup instructions
+# - Use the provided scripts in scripts/setup/ to generate secure values automatically
