storage-limit-management added, not tested fully

--- a/.env.example
+++ b/.env.example
@@ -361,6 +361,11 @@ SESSION_FEATURE_CACHING=false
 # Storage Configuration
 STORAGE_BASE_DIR=storage
 STORAGE_IMAGES_DIR=storage/images
+
+# Storage Management Configuration
+STORAGE_WARNING_THRESHOLD=80
+STORAGE_MONITORING_ENABLED=true
+
 LOGS_DIR=logs
 
 # MySQL-specific storage settings
