--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ python-jose>=3.3.0
 asyncio>=3.4.3
 aiofiles>=23.1.0
 flask>=2.3.0
-# flask-socketio>=5.3.0  # Replaced with Server-Sent Events (SSE)
+flask-socketio>=5.3.0
+flask-cors>=4.0.0
 flask-sqlalchemy>=3.0.0
 flask-migrate>=4.0.0
 flask-wtf>=1.1.0
