generally the session and websockets are working

--- a/websocket_config_examples.env
+++ b/websocket_config_examples.env
@@ -14,29 +14,41 @@ FLASK_ENV=development
 FLASK_HOST=127.0.0.1
 FLASK_PORT=5000
 
-# CORS configuration for development (allows local development servers)
-SOCKETIO_CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:5000,http://localhost:8080
-SOCKETIO_CORS_CREDENTIALS=true
-
 # Transport configuration (both WebSocket and polling for compatibility)
 SOCKETIO_TRANSPORTS=websocket,polling
-
-# Relaxed timeouts for development
 SOCKETIO_PING_TIMEOUT=60
 SOCKETIO_PING_INTERVAL=25
+SOCKETIO_ASYNC_MODE=threading
+
+# CORS configuration for development (allows local development servers)
+SOCKETIO_CORS_ORIGINS=http://127.0.0.1:5000,http://localhost:5000,http://localhost:3000,http://127.0.0.1:3000
+SOCKETIO_CORS_CREDENTIALS=true
+SOCKETIO_CORS_METHODS=GET,POST
+SOCKETIO_CORS_HEADERS=Content-Type,Authorization
 
 # Client reconnection settings
 SOCKETIO_RECONNECTION=true
-SOCKETIO_RECONNECTION_ATTEMPTS=5
-SOCKETIO_RECONNECTION_DELAY=1000
-SOCKETIO_RECONNECTION_DELAY_MAX=5000
+SOCKETIO_RECONNECTION_ATTEMPTS=10
+SOCKETIO_RECONNECTION_DELAY=500
+SOCKETIO_RECONNECTION_DELAY_MAX=3000
 SOCKETIO_TIMEOUT=20000
 
-# Development security settings (relaxed for easier debugging)
-SOCKETIO_REQUIRE_AUTH=false
-SOCKETIO_SESSION_VALIDATION=false
-SOCKETIO_RATE_LIMITING=false
-SOCKETIO_CSRF_PROTECTION=false
+# Client configuration (development-optimized)
+SOCKETIO_FORCE_NEW=false
+SOCKETIO_UPGRADE=true
+SOCKETIO_REMEMBER_UPGRADE=true
+SOCKETIO_WITH_CREDENTIALS=true
+
+# Performance configuration (development limits)
+SOCKETIO_MAX_CONNECTIONS=100
+SOCKETIO_CONNECTION_POOL_SIZE=5
+SOCKETIO_MAX_HTTP_BUFFER_SIZE=500000
+
+# Development security settings (working configuration)
+SOCKETIO_REQUIRE_AUTH=true
+SOCKETIO_SESSION_VALIDATION=true
+SOCKETIO_RATE_LIMITING=true
+SOCKETIO_CSRF_PROTECTION=true
 
 # Development logging (verbose for debugging)
 SOCKETIO_LOG_LEVEL=DEBUG
