--- a/websocket_production_config.env.example
+++ b/websocket_production_config.env.example
@@ -162,14 +162,11 @@ WEBSOCKET_CONNECTION_POOLING=true
 WEBSOCKET_MESSAGE_COMPRESSION=true
 WEBSOCKET_KEEP_ALIVE=true
 
-# Transport Configuration
+# Transport Configuration (Final Working Configuration)
 SOCKETIO_TRANSPORTS=websocket,polling
-SOCKETIO_ASYNC_MODE=threading
-
-# Timeout Configuration
 SOCKETIO_PING_TIMEOUT=60
 SOCKETIO_PING_INTERVAL=25
-SOCKETIO_MAX_HTTP_BUFFER_SIZE=1000000
+SOCKETIO_ASYNC_MODE=threading
 
 # Client Configuration
 SOCKETIO_RECONNECTION=true
@@ -177,6 +174,15 @@ SOCKETIO_RECONNECTION_ATTEMPTS=5
 SOCKETIO_RECONNECTION_DELAY=1000
 SOCKETIO_RECONNECTION_DELAY_MAX=5000
 SOCKETIO_TIMEOUT=20000
+SOCKETIO_FORCE_NEW=false
+SOCKETIO_UPGRADE=true
+SOCKETIO_REMEMBER_UPGRADE=true
+SOCKETIO_WITH_CREDENTIALS=true
+
+# Performance Configuration
+SOCKETIO_MAX_CONNECTIONS=1000
+SOCKETIO_CONNECTION_POOL_SIZE=10
+SOCKETIO_MAX_HTTP_BUFFER_SIZE=1000000
 
 # =============================================================================
 # CORS CONFIGURATION
@@ -185,7 +191,7 @@ SOCKETIO_TIMEOUT=20000
 # CORS Origins (auto-generated from FLASK_HOST/FLASK_PORT if not set)
 # SOCKETIO_CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 
-# CORS Settings
+# CORS Settings (Final Working Configuration)
 SOCKETIO_CORS_CREDENTIALS=true
 SOCKETIO_CORS_METHODS=GET,POST
 SOCKETIO_CORS_HEADERS=Content-Type,Authorization
