post z.ai admin testing and fixes

--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,9 @@ scripts/setup/generate_env_secrets_ILM.py
 #playwright tests
 tests/playwright
 .aider*
-
+tests/admin/playwright
+test-results/
+playwright-report/
 
 #GEMINI.md
 GEMINI.md
