added "num_ctx" to ollama as the OLLAMA_MODEL_CONTEXT .env var

--- a/.env.example
+++ b/.env.example
@@ -177,6 +177,7 @@ DB_SESSION_SYNC=true              # Sync session data between Redis and database
 OLLAMA_URL=CHANGE_ME_TO_OLLAMA_URL_AND_PORT
 OLLAMA_MODEL=llava:7b
 OLLAMA_TIMEOUT=60.0
+OLLAMA_MODEL_CONTEXT=4096         # Model context window size (num_ctx parameter)
 
 # Ollama Performance Settings
 OLLAMA_MAX_CONCURRENT_REQUESTS=3  # Maximum concurrent Ollama requests
