Add missing storage service modules to repository
- Fixed .gitignore to exclude only data storage directories, not service code
- Added app/services/storage/ with all storage service components
- Added app/services/monitoring/storage/ for storage monitoring
- Includes storage alert system, health monitoring, and configuration services

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,8 @@ venv.bak/
 .env.backup.*
 .env.*.deprecated
 
-# Storage directories
-storage/
+# Storage directories (data storage, not service code)
+/storage/
 logs/
 
 # Database files
