--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ email_validator>=2.0.0
 sqlalchemy>=2.0.0
 alembic>=1.12.0
 python-dotenv>=1.0.0
+python-dateutil>=2.8.0
 nltk>=3.8.1
 language-tool-python>=2.7.1
 redis>=4.5.0
