redis-queue-migration - Setup RQ Infrastructure and Dependencies

--- a/.env.example
+++ b/.env.example
@@ -158,6 +158,33 @@ REDIS_POOL_RETRY_ON_TIMEOUT=true  # Retry on connection timeout
 REDIS_SOCKET_KEEPALIVE=true       # Enable socket keepalive
 REDIS_SOCKET_KEEPALIVE_OPTIONS={}  # Keepalive options
 
+# =============================================================================
+# RQ (REDIS QUEUE) CONFIGURATION
+# =============================================================================
+
+# RQ Worker Configuration
+WORKER_MODE=integrated            # Worker mode: integrated, external, hybrid
+RQ_WORKER_COUNT=2                # Number of RQ workers to start
+RQ_WORKER_TIMEOUT=300            # Worker timeout in seconds (5 minutes)
+RQ_WORKER_MEMORY_LIMIT=500       # Worker memory limit in MB
+
+# RQ Queue Configuration
+RQ_QUEUE_PREFIX=vedfolnir:rq:    # Queue name prefix
+RQ_DEFAULT_TIMEOUT=300           # Default job timeout in seconds
+RQ_RESULT_TTL=86400              # Result TTL in seconds (24 hours)
+RQ_JOB_TTL=7200                  # Job TTL in seconds (2 hours)
+
+# RQ Health Monitoring
+RQ_HEALTH_CHECK_INTERVAL=30      # Health check interval in seconds
+REDIS_MEMORY_THRESHOLD=0.8       # Redis memory usage threshold (80%)
+RQ_FAILURE_THRESHOLD=3           # Consecutive failures before marking unhealthy
+
+# RQ Retry Configuration
+RQ_MAX_RETRIES=3                 # Maximum retry attempts for failed jobs
+RQ_RETRY_BACKOFF_STRATEGY=exponential # Retry strategy: linear, exponential, fixed
+RQ_RETRY_BASE_DELAY=60           # Base retry delay in seconds
+RQ_RETRY_MAX_DELAY=3600          # Maximum retry delay in seconds
+
 # Flask Session Cookie Configuration
 SESSION_COOKIE_NAME=session
 SESSION_COOKIE_HTTPONLY=true
