--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,8 @@ python-dateutil>=2.8.0
 nltk>=3.8.1
 language-tool-python>=2.7.1
 redis>=4.5.0
+rq>=1.15.0
+rq-dashboard>=0.7.0
 pymysql>=1.1.0
 cachetools>=5.3.0
 psutil>=5.9.0
