--- a/requirements.txt
+++ b/requirements.txt
@@ -26,12 +26,16 @@ python-dotenv>=1.0.0
 python-dateutil>=2.8.0
 nltk>=3.8.1
 language-tool-python>=2.7.1
-redis>=4.5.0
-rq>=1.15.0
+# Redis Queue (RQ) Dependencies
+redis>=5.0.0
+rq>=1.16.0
 rq-dashboard>=0.7.0
+rq-scheduler>=0.13.0
 pymysql>=1.1.0
 cachetools>=5.3.0
 psutil>=5.9.0
 bleach>=6.0.0
 gunicorn>=23.0.0
 eventlet>=0.33.0
+click>=8.1.0
+setproctitle>=1.3.0
