Check in all pending changes
- Update MCP settings configuration
- Enhance Dockerfile and Docker Compose configurations
- Update LICENSE file
- Improve admin job management JavaScript
- Enhance API and caption route handlers
- Update database manager and session management
- Refine MySQL configuration files
- Update Docker deployment documentation
- Add development requirements
- Improve caption generation UI and functionality
- Update web application configuration

--- a/config/mysql/development.cnf
+++ b/config/mysql/development.cnf
@@ -11,8 +11,8 @@ character-set-server=utf8mb4
 collation-server=utf8mb4_unicode_ci
 default-time-zone='+00:00'
 
-# Development-friendly settings
-sql_mode=STRICT_TRANS_TABLES,NO_ZERO_DATE,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO
+# Development-friendly settings (MySQL 8.0 compatible)
+sql_mode=STRICT_TRANS_TABLES,NO_ZERO_DATE,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION
 
 # Connection settings (relaxed for development)
 max_connections=100
